import { mount, mockScrollTop } from '../../../test';

test('sticky to top', () => {
  const wrapper = mount({
    template: `
      <buri-sticky style="height: 10px;">
        Content
      </buri-sticky>
    `
  });

  expect(wrapper).toMatchSnapshot();
  mockScrollTop(100);
  expect(wrapper).toMatchSnapshot();
  mockScrollTop(0);
});

test('z-index prop', () => {
  const wrapper = mount({
    template: `
      <buri-sticky style="height: 10px;" :z-index="0">
        Content
      </buri-sticky>
    `
  });

  mockScrollTop(100);
  expect(wrapper).toMatchSnapshot();
  mockScrollTop(0);
});

test('offset-top prop', () => {
  const wrapper = mount({
    template: `
      <buri-sticky style="height: 10px;" :offset-top="10">
        Content
      </buri-sticky>
    `
  });

  mockScrollTop(100);
  expect(wrapper).toMatchSnapshot();
  mockScrollTop(0);
});

test('container prop', () => {
  const wrapper = mount({
    template: `
      <div ref="container" style="height: 20px;">
        <buri-sticky ref="sticky" style="height: 10px;" :container="container">
          Content
        </buri-sticky>
      </div>
    `,
    data() {
      return {
        container: null
      };
    },
    mounted() {
      this.container = this.$refs.container;
    }
  });

  mockScrollTop(15);
  expect(wrapper).toMatchSnapshot();
  mockScrollTop(25);
  expect(wrapper).toMatchSnapshot();
  mockScrollTop(0);
});
