// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`container prop 1`] = `
<div style="height: 20px;">
  <div style="height: 10px;">
    <div class="buri-sticky buri-sticky--fixed" style="transform: translate3d(0, -5px, 0);">
      Content
    </div>
  </div>
</div>
`;

exports[`container prop 2`] = `
<div style="height: 20px;">
  <div style="height: 10px;">
    <div class="buri-sticky" style="">
      Content
    </div>
  </div>
</div>
`;

exports[`offset-top prop 1`] = `
<div style="height: 10px;">
  <div class="buri-sticky buri-sticky--fixed" style="top: 10px;">
    Content
  </div>
</div>
`;

exports[`sticky to top 1`] = `
<div style="height: 10px;">
  <div class="buri-sticky">
    Content
  </div>
</div>
`;

exports[`sticky to top 2`] = `
<div style="height: 10px;">
  <div class="buri-sticky buri-sticky--fixed">
    Content
  </div>
</div>
`;

exports[`z-index prop 1`] = `
<div style="height: 10px;">
  <div class="buri-sticky buri-sticky--fixed" style="z-index: 0;">
    Content
  </div>
</div>
`;
